Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/INF_Case_Survey__c.object-meta.xml
<CustomObject>
    <label>Case Survey</label>
    <nameField>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Case Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>