Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Surveys</relationshipLabel>
    <relationshipName>Case_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>