Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/fields/Case_Survey_Year__c.field-meta.xml
<CustomField>
    <fullName>Case_Survey_Year__c</fullName>
    <formula>Case_Survey_Month__c+&#39; &#39;+TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>Case Survey Year</label>
    <type>Text</type>
</CustomField>