Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/fields/INF_Recently_Created_Survey__c.field-meta.xml
<CustomField>
    <fullName>INF_Recently_Created_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recently Created Survey</label>
    <type>Checkbox</type>
</CustomField>