Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/fields/INF_Support_Sat_Bin__c.field-meta.xml
<CustomField>
    <fullName>INF_Support_Sat_Bin__c</fullName>
    <label>Support Satisfaction Bin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Excellent Product</fullName>
            </value>
            <value>
                <fullName>Excellent Service</fullName>
            </value>
            <value>
                <fullName>Fast Resolution</fullName>
            </value>
            <value>
                <fullName>Frequency of Updates</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Phone Issues</fullName>
            </value>
            <value>
                <fullName>Problem Solved</fullName>
            </value>
            <value>
                <fullName>Rep Communication Skills</fullName>
            </value>
            <value>
                <fullName>Rep Understanding of the Problem</fullName>
            </value>
            <value>
                <fullName>SDK</fullName>
            </value>
            <value>
                <fullName>Software Activation</fullName>
            </value>
            <value>
                <fullName>Software Defect</fullName>
            </value>
            <value>
                <fullName>Took too long</fullName>
            </value>
            <value>
                <fullName>Unsupported Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>