Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/fields/INF_Support_sat_Comments__c.field-meta.xml
<CustomField>
    <fullName>INF_Support_sat_Comments__c</fullName>
    <label>Support Satisfaction Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>