Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/fields/INF_Support_Sat_Yes__c.field-meta.xml
<CustomField>
    <fullName>INF_Support_Sat_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Satisfaction Yes</label>
    <type>Checkbox</type>
</CustomField>