Perkin-UAT/force-app/main/default/objects/INF_Case_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>INF_Support_Sat_No__c</columns>
    <columns>INF_Support_Sat_Yes__c</columns>
    <columns>INF_Recently_Created_Survey__c</columns>
    <columns>INF_Support_Sat_Bin__c</columns>
    <columns>INF_Support_sat_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>